--- a/charts/vaultwarden/templates/deployment.yaml
+++ b/charts/vaultwarden/templates/deployment.yaml
@@ -38,7 +38,7 @@ spec:
               value: "postgresql://{{ .Values.postgresql.user }}:{{ .Values.postgresql.password }}@{{ .Release.Name }}-cnpg-rw/vaultwarden"
             {{- if .Values.ingress.enabled }}
             - name: DOMAIN
-              value: "{{ .Values.ingress.host }}"
+              value: "https://{{ .Values.ingress.host }}"
             {{- end }}
           ports:
             - name: http
