--- a/charts/mqtt/Chart.yaml
+++ b/charts/mqtt/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-name: mosquitto
-description: A Helm chart for mosquitto
+name: mqtt
+description: A Helm chart for mqtt
 type: application
-version: 1.0.0
+version: 1.0.1
 appVersion: "1.0.0"
 keywords:
   - mosquitto
