--- a/charts/mqtt/values.yaml
+++ b/charts/mqtt/values.yaml
@@ -3,7 +3,9 @@ replicaCount: 1
 image:
   repository: eclipse-mosquitto
   pullPolicy: IfNotPresent
-  tag: "2.0"
+  tag: "2.0.20"
+
+timezone: "Europe/Paris"
 
 persistence:
   enabled: false
@@ -21,24 +23,6 @@ serviceAccount:
 
 user: mosquitto
 password: changeme
-
-livenessProbe:
-  tcpSocket:
-    port: 1883
-  initialDelaySeconds: 15
-  periodSeconds: 20
-  timeoutSeconds: 5
-  successThreshold: 1
-  failureThreshold: 3
-
-readinessProbe:
-  tcpSocket:
-    port: 1883
-  initialDelaySeconds: 5
-  periodSeconds: 10
-  timeoutSeconds: 3
-  successThreshold: 1
-  failureThreshold: 3
 
 addons:
   zigbee2mqtt:
