--- a/charts/mqtt/Chart.yaml
+++ b/charts/mqtt/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: mosquitto
-description: A Helm chart for mosquitto
+name: mqtt
+description: A Helm chart for mqtt
 type: application
 version: 1.0.0
 appVersion: "1.0.0"
