--- a/charts/mqtt/values.yaml
+++ b/charts/mqtt/values.yaml
@@ -22,23 +22,23 @@ serviceAccount:
 user: mosquitto
 password: changeme
 
-livenessProbe:
-  tcpSocket:
-    port: 1883
-  initialDelaySeconds: 15
-  periodSeconds: 20
-  timeoutSeconds: 5
-  successThreshold: 1
-  failureThreshold: 3
+# livenessProbe:
+#   tcpSocket:
+#     port: 1883
+#   initialDelaySeconds: 15
+#   periodSeconds: 20
+#   timeoutSeconds: 5
+#   successThreshold: 1
+#   failureThreshold: 3
 
-readinessProbe:
-  tcpSocket:
-    port: 1883
-  initialDelaySeconds: 5
-  periodSeconds: 10
-  timeoutSeconds: 3
-  successThreshold: 1
-  failureThreshold: 3
+# readinessProbe:
+#   tcpSocket:
+#     port: 1883
+#   initialDelaySeconds: 5
+#   periodSeconds: 10
+#   timeoutSeconds: 3
+#   successThreshold: 1
+#   failureThreshold: 3
 
 addons:
   zigbee2mqtt:
