--- a/charts/mqtt/templates/mqtt-deployment.yaml
+++ b/charts/mqtt/templates/mqtt-deployment.yaml
@@ -18,10 +18,10 @@ spec:
         app.kubernetes.io/component: mqtt
     spec:
       serviceAccountName: {{ include "mosquitto.serviceAccountName" . }}
-      # securityContext:
-      #   runAsUser: 1883
-      #   runAsGroup: 1883
-      #   fsGroup: 1883
+      securityContext:
+        runAsUser: 1883
+        runAsGroup: 1883
+        fsGroup: 1883
       initContainers:
       - name: "init-volumes"
         image: "busybox"
