--- a/charts/mqtt/Chart.yaml
+++ b/charts/mqtt/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: mqtt
 description: A Helm chart for mqtt
 type: application
-version: 1.0.1-beta2
+version: 1.0.1
 appVersion: "1.0.0"
 keywords:
   - mosquitto
