--- a/charts/mqtt/values.yaml
+++ b/charts/mqtt/values.yaml
@@ -5,6 +5,8 @@ image:
   pullPolicy: IfNotPresent
   tag: "2.0.20"
 
+timezone: "Europe/Paris"
+
 persistence:
   enabled: false
   accessMode: ReadWriteOnce
@@ -21,24 +23,6 @@ serviceAccount:
 
 user: mosquitto
 password: changeme
-
-# livenessProbe:
-#   tcpSocket:
-#     port: 1883
-#   initialDelaySeconds: 15
-#   periodSeconds: 20
-#   timeoutSeconds: 5
-#   successThreshold: 1
-#   failureThreshold: 3
-
-# readinessProbe:
-#   tcpSocket:
-#     port: 1883
-#   initialDelaySeconds: 5
-#   periodSeconds: 10
-#   timeoutSeconds: 3
-#   successThreshold: 1
-#   failureThreshold: 3
 
 addons:
   zigbee2mqtt:
