--- a/charts/nextcloud/templates/imaginary/imaginary-deployment.yaml
+++ b/charts/nextcloud/templates/imaginary/imaginary-deployment.yaml
@@ -35,6 +35,27 @@ spec:
             - containerPort: 9000
               protocol: TCP
               name: "imaginary"
+          startupProbe:
+            exec:
+              command:
+                - /healthcheck.sh
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            failureThreshold: 30
+          readinessProbe:
+            exec:
+              command:
+                - /healthcheck.sh
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            failureThreshold: 3
+          livenessProbe:
+            exec:
+              command:
+                - /healthcheck.sh
+            initialDelaySeconds: 15
+            periodSeconds: 20
+            failureThreshold: 5
           securityContext:
             runAsUser: 1000
             runAsNonRoot: true
