--- a/charts/home-assistant/values.yaml
+++ b/charts/home-assistant/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/home-assistant/home-assistant
+  repository: home-assistant/home-assistant
   pullPolicy: IfNotPresent
   tag: "2024.12.5"
 
